--- a/html/index.html
+++ b/html/index.html
@@ -141,8 +141,8 @@
                 </div>
             </section>
         </section>
-        <button id="editContentButton">
-            <i class='bx bx-edit-alt'></i>
+        <button id="editContentButton">EDIT
+            
         </button>
         <script>
             <div class="container">
