--- a/html/index.html
+++ b/html/index.html
@@ -142,7 +142,7 @@
             </section>
         </section>
         <button id="editContentButton">EDIT
-            
+             <h1>Edit Content</h1>
         </button>
         <script>
             <div class="container">
