--- a/html/index.html
+++ b/html/index.html
@@ -306,7 +306,7 @@
             localStorage.removeItem('changeStyle');
         }
     </script>
-    <script src="./index.js"></script>
+    <script src="../html/index.js"></script>
 
 </body>
 
