--- a/html/index.html
+++ b/html/index.html
@@ -141,8 +141,8 @@
                 </div>
             </section>
         </section>
-        <button id="editContentButton">EDIT
-             <h1>Edit Content</h1>
+        <button id="editContentButton">
+            <i class='bx bx-edit-alt'></i>
         </button>
         <script>
             <div class="container">
@@ -306,7 +306,7 @@
             localStorage.removeItem('changeStyle');
         }
     </script>
-    <script src="../html/index.js"></script>
+    <script src="./index.js"></script>
 
 </body>
 
