--- a/html/index.html
+++ b/html/index.html
@@ -57,11 +57,11 @@
 
     <main>
         <section x-data="indexdata">
-            <img src="../images/forest.jpg" class="forest">
+            <img src="../images/forest.jpg" class="forest" alt="homepic">
             <section class="container23">
                 <section class="card23">
                     <img src="../images/srilankaa (1).jpg" alt="srilanka">
-                    <div class="card-overlay23">
+                    <div class="card-overlay23"></div>
                         <h2 x-text="h21"></h2>
                         <p x-text="p1"></p>
                         <p x-text="p2"></p>
@@ -92,7 +92,7 @@
                         <h2 x-text="h23"></h2>
                         <p x-text="p12"></p>
                     </div>
-                    </div>
+                    
                 </section>
             </section>
             <section>
@@ -183,7 +183,7 @@
                         }
                     }
                 </script>
-                </div>
+                
                 <div class="containerf">
                     <div class="rowf">
                         <div class="footer-col">
